--- a/new.html
+++ b/new.html
@@ -2,10 +2,12 @@
 
     <head>
        
-        <title>Symphony</title>
+        <title>DevOps</title>
    
     </head>
     <body>
         <h1>WELCOME TO OUR SITE</h1>
         <p>welcome to amjad blog I hope to enjoy in my blog</p>
+        <p>test</p>
+        <p> hello</p>
         </body>
