--- a/new.html
+++ b/new.html
@@ -10,4 +10,5 @@
         <p>welcome to amjad blog I hope to enjoy in my blog</p>
         <p>test</p>
         <p> hello</p>
+        <p>enjoy</p>
         </body>
