--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
     <body>
         <h1>WELCOME TO OUR SITE</h1>
         <p>welcome to amjad blog I hope to enjoy in my blog</p>
-        <p>test</p>
+        <h2>test</h2>
         <p> hello</p>
         <p>enjoy</p>
         </body>
