--- a/new.html
+++ b/new.html
@@ -9,6 +9,6 @@
         <h1>WELCOME TO OUR SITE</h1>
         <p>welcome to amjad blog I hope to enjoy in my blog</p>
         <p>test</p>
-        <p> hello</p>
-        <h3>learn more with me</h3>
+        <h3> hello</h3>
+        <p>learn more with me</p>
         </body>
